--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,5 +36,6 @@ subjects:
 - !lcsh 'Oxygen -- Juvenile fiction'
 - !lcsh 'Missing children -- Juvenile fiction'
 - !lcsh 'Shipwrecks -- Juvenile fiction'
+- GITenberg
 title: In Search of a Son
 url: http://www.gutenberg.org/ebooks/36189
